--- a/Combos.html
+++ b/Combos.html
@@ -150,7 +150,13 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="breadcrumb__text">
-                        <h2>Bollos</h2>
+                        <h2>Shop</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="breadcrumb__links">
+                        <a href="./index.html">Home</a>
+                        <span>Shop</span>
                     </div>
                 </div>
             </div>
@@ -161,82 +167,248 @@
     <!-- Shop Section Begin -->
     <section class="shop spad">
         <div class="container">
-            <div class="row products-gap">
-
-                <!-- category cards begin -->
-
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="combo-card drop-shadow">
-                        <div class="combo-img light-on-hover">
-                            <img src="img/products/combo banana split.jpg" alt=""></img>
+            <div class="shop__option">
+                <div class="row">
+                    <div class="col-lg-7 col-md-7">
+                        <div class="shop__option__search">
+                            <form action="#">
+                                <select>
+                                    <option value="">Categories</option>
+                                    <option value="">Red Velvet</option>
+                                    <option value="">Cup Cake</option>
+                                    <option value="">Biscuit</option>
+                                </select>
+                                <input type="text" placeholder="Search">
+                                <button type="submit"><i class="fa fa-search"></i></button>
+                            </form>
                         </div>
-                        <div class="combo-card-info">
-                            <div class="combo-main-info">
-                                <h5>Combo banana split</h5>
-                                <ul class="combo-list">
-                                    <li class="combo-list-item">Banana split</li>
-                                    <li class="combo-list-item">Frappe</li>
-                                </ul>
+                    </div>
+                    <div class="col-lg-5 col-md-5">
+                        <div class="shop__option__right">
+                            <select>
+                                <option value="">Default sorting</option>
+                                <option value="">A to Z</option>
+                                <option value="">1 - 8</option>
+                                <option value="">Name</option>
+                            </select>
+                            <a href="#"><i class="fa fa-list"></i></a>
+                            <a href="#"><i class="fa fa-reorder"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
                             </div>
-                            <div class="combo-card-details">
-                                <div class="price">110.00</div>
-                                <div>
-                                    <a href="combos.html" class="btn-light">Ver más <i class="fa fa-chevron-right"></i></a>
-                                </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">Dozen Cupcakes</a></h6>
+                            <div class="product__item__price">$32.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="combo-card drop-shadow">
-                        <div class="combo-img light-on-hover">
-                            <img src="img/products/combo nachos.jpg" alt=""></img>
-                        </div>
-                        <div class="combo-card-info">
-                            <div class="combo-main-info">
-                                <h5>Combo nachos</h5>
-                                <ul class="combo-list">
-                                    <li class="combo-list-item">Nachos</li>
-                                    <li class="combo-list-item">2 frappes</li>
-                                </ul>
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-2.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
                             </div>
-                            <div class="combo-card-details">
-                                <div class="price">130.00</div>
-                                <div>
-                                    <a href="combos.html" class="btn-light">Ver más <i class="fa fa-chevron-right"></i></a>
-                                </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">Cookies and Cream</a></h6>
+                            <div class="product__item__price">$30.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="combo-card drop-shadow">
-                        <div class="combo-img light-on-hover">
-                            <img src="img/products/combo waffle.jpg" alt=""></img>
-                        </div>
-                        <div class="combo-card-info">
-                            <div class="combo-main-info">
-                                <h5>Combo waffle</h5>
-                                <ul class="combo-list">
-                                    <li class="combo-list-item">Waflee</li>
-                                    <li class="combo-list-item">Frappe</li>
-                                </ul>
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-3.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
                             </div>
-                            <div class="combo-card-details">
-                                <div class="price">120.00</div>
-                                <div>
-                                    <a href="combos.html" class="btn-light">Ver más <i class="fa fa-chevron-right"></i></a>
-                                </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">Gluten Free Mini Dozen</a></h6>
+                            <div class="product__item__price">$31.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
-
-                <!-- category cards end -->
-
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-4.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">Cookie Dough</a></h6>
+                            <div class="product__item__price">$25.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-5.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">Vanilla Salted Caramel</a></h6>
+                            <div class="product__item__price">$05.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-6.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">German Chocolate</a></h6>
+                            <div class="product__item__price">$14.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-7.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">Dulce De Leche</a></h6>
+                            <div class="product__item__price">$32.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-8.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">Mississippi Mud</a></h6>
+                            <div class="product__item__price">$08.00</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-9.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">VEGAN/GLUTEN FREE</a></h6>
+                            <div class="product__item__price">$98.85</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-10.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">SWEET CELTICS</a></h6>
+                            <div class="product__item__price">$5.77</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-11.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">SWEET AUTUMN LEAVES</a></h6>
+                            <div class="product__item__price">$26.41</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="product__item">
+                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-12.jpg">
+                            <div class="product__label">
+                                <span>Cupcake</span>
+                            </div>
+                        </div>
+                        <div class="product__item__text">
+                            <h6><a href="#">PALE YELLOW SWEET</a></h6>
+                            <div class="product__item__price">$22.47</div>
+                            <div class="cart_add">
+                                <a href="#">Add to cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="shop__last__option">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="shop__pagination">
+                            <a href="#">1</a>
+                            <a href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#"><span class="arrow_carrot-right"></span></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="shop__last__text">
+                            <p>Showing 1-9 of 10 results</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Shop Section End -->
 
