--- a/shop.html
+++ b/shop.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
+    <script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 
 <body>
@@ -34,115 +36,15 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Offcanvas Menu Begin -->
-    <div class="offcanvas-menu-overlay"></div>
-    <div class="offcanvas-menu-wrapper">
-        <div class="offcanvas__cart">
-            <div class="offcanvas__cart__links">
-                <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                <a href="#"><img src="img/icon/heart.png" alt=""></a>
-            </div>
-            <div class="offcanvas__cart__item">
-                <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
-                <div class="cart__price">Cart: <span>$0.00</span></div>
-            </div>
-        </div>
-        <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
-        </div>
-        <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__option">
-            <ul>
-                <li>USD <span class="arrow_carrot-down"></span>
-                    <ul>
-                        <li>EUR</li>
-                        <li>USD</li>
-                    </ul>
-                </li>
-                <li>ENG <span class="arrow_carrot-down"></span>
-                    <ul>
-                        <li>Spanish</li>
-                        <li>ENG</li>
-                    </ul>
-                </li>
-                <li><a href="#">Sign in</a> <span class="arrow_carrot-down"></span></li>
-            </ul>
-        </div>
-    </div>
-    <!-- Offcanvas Menu End -->
+<!-- Nav Bar Begin -->
+<div id="nav-placeholder"></div>
 
-    <!-- Header Section Begin -->
-    <header class="header">
-        <div class="header__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="header__top__inner">
-                            <div class="header__top__left">
-                                <ul>
-                                    <li>USD <span class="arrow_carrot-down"></span>
-                                        <ul>
-                                            <li>EUR</li>
-                                            <li>USD</li>
-                                        </ul>
-                                    </li>
-                                    <li>ENG <span class="arrow_carrot-down"></span>
-                                        <ul>
-                                            <li>Spanish</li>
-                                            <li>ENG</li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Sign in</a> <span class="arrow_carrot-down"></span></li>
-                                </ul>
-                            </div>
-                            <div class="header__logo">
-                                <a href="./index.html"><img src="img/logo.png" alt=""></a>
-                            </div>
-                            <div class="header__top__right">
-                                <div class="header__top__right__links">
-                                    <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                                    <a href="#"><img src="img/icon/heart.png" alt=""></a>
-                                </div>
-                                <div class="header__top__right__cart">
-                                    <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
-                                    <div class="cart__price">Cart: <span>$0.00</span></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="canvas__open"><i class="fa fa-bars"></i></div>
-            </div>
-        </div>
-    </header>
-	<header class="header nav">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <nav class="header__menu mobile-menu">
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./acerca.html">About</a></li>
-                            <li class="active"><a href="./shop.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./wisslist.html">Wisslist</a></li>
-                                    <li><a href="./Class.html">Class</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- Header Section End -->
+<script>
+    $.get("snippets/nav-bar.html", function (data) {
+        $("#nav-placeholder").replaceWith(data);
+    });
+</script>
+<!-- Nav Bar End -->
 
     <!-- Breadcrumb Begin -->
     <div class="breadcrumb-option">
@@ -164,47 +66,55 @@
             <div class="row products-gap">
                 <!-- category cards begin -->
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="wrapper-hover"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/products/bollos.jpg"> </div>
+                    <a href="./products.html">
+                        <div class="product__item">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/bollos.jpg"> </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a  href="#">Bollos</a></h6>
+                            </div>
                         </div>
-                        <div class="product__item__text">
-                            <h6><a  href="#">Bollos</a></h6>
-                        </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="wrapper-hover"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/products/crepa.jpg"> </div>
+                    <a href="./products.html">
+                        <div class="product__item">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/crepa.jpg"> </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a  href="#">Crepas y waffles</a></h6>
+                            </div>
                         </div>
-                        <div class="product__item__text">
-                            <h6><a  href="#">Crepas y waffles</a></h6>
-                        </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="wrapper-hover"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/products/frapes.jpg"> </div>
+                    <a href="./products.html">
+                        <div class="product__item">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/frapes.jpg"> </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a  href="#">Frappes y malteadas</a></h6>
+                            </div>
                         </div>
-                        <div class="product__item__text">
-                            <h6><a  href="#">Frappes y malteadas</a></h6>
-                        </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="wrapper-hover"> 
-                            <div class="product__item__pic set-bg hover" data-setbg="img/products/nachos.jpg"> </div>
+                    <a href="./products.html">
+                        <div class="product__item">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/nachos.jpg"> </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a  href="#">Otros</a></h6>
+                            </div>
                         </div>
-                        <div class="product__item__text">
-                            <h6><a  href="#">Otros</a></h6>
-                        </div>
-                    </div>
+                    </a>
                 </div>
                 <!-- category cards end -->
 
@@ -212,69 +122,61 @@
     <!-- Shop Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>WORKING HOURS</h6>
-                        <ul>
-                            <li>Monday - Friday: 08:00 am – 08:30 pm</li>
-                            <li>Saturday: 10:00 am – 16:30 pm</li>
-                            <li>Sunday: 10:00 am – 16:30 pm</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__about">
-                        <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
-                        </div>
-                        <p>Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore dolore magna aliqua.</p>
-                        <div class="footer__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__newslatter">
-                        <h6>Subscribe</h6>
-                        <p>Get latest updates and offers.</p>
-                        <form action="#">
-                            <input type="text" placeholder="Email">
-                            <button type="submit"><i class="fa fa-send-o"></i></button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-7">
-                        <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      </p>
-                  </div>
-                  <div class="col-lg-5">
-                    <div class="copyright__widget">
-                        <ul>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">Site Map</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- Footer Section End -->
+	<footer class="footer set-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-6 col-sm-6">
+					<div class="footer__widget">
+						<h6>Horario</h6>
+						<ul>
+							<li>Lunes - Domingo: 11:00 am – 08:00 pm</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-6">
+					<div class="footer__about">
+						<div class="footer__logo">
+							<a href="#"><img src="img/footer-logo.png" alt=""></a>
+						</div>
+						<div class="footer__social">
+							<a href="https://www.facebook.com/profile.php?id=100066507559987"><i
+									class="fa fa-facebook"></i></a>
+							<a href="#" style="display: none;"><i class="fa fa-twitter"></i></a>
+							<a href="#" style="display: none;"><i class="fa fa-instagram"></i></a>
+							<a href="#" style="display: none;"><i class="fa fa-youtube-play"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-md-6 col-sm-6">
+					<div class="footer__widget text-white">
+						<h6>Contáctanos</h6>
+						<ul>
+							<li><i class="fa fa-phone"></i>899 542 4832</li>
+							<!-- <li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li> -->
+							<li><a href="contact.html">Ver más</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-7">
+						<p class="copyright__text text-white">
+							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							Copyright &copy;
+							<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+							template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
+								href="https://colorlib.com" target="_blank">Colorlib</a>
+							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- Footer Section End -->
 
 <!-- Search Begin -->
 <div class="search-model">
