--- a/login.html
+++ b/login.html
@@ -34,36 +34,19 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="breadcrumb__text">
-                        <h2>Iniciar sesión</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="breadcrumb__links">
-                        <span>Iniciar sesión</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Breadcrumb End -->
+
 
     <!-- Login Form Begin -->
-    <div class="spad">
+    <div class="spad" style="padding-top: 9%;">
         <div class="container">
             <div class="row justify-content-around">
-                <div class="col-5">
+                <div style="display: flex;" class="col-5">
                     <img src="img/footer-logo.png" alt="">
                 </div>
                 <div class="col-5">
                     <div class="card drop-shadow form-card">
                         <form action="" method="post">
-                            <h2>Iniciar sesión</h2>
+                            <h2 style="padding-bottom: 20px;">Iniciar sesión</h2>
                             <div class="form-group">
                                 <div class="d-flex justify-content-between">
                                     <label for="">Correo electrónico</label>
