Rush hour changes

--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -28,7 +28,7 @@
                     <h6>Contáctanos</h6>
                     <ul>
                         <li><i class="fa fa-phone"></i>899 542 4832</li>
-                        <!-- <li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li> -->
+                        <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
                         <li><a href="contact.html">Ver más</a></li>
                     </ul>
                 </div>
