--- a/Products.html
+++ b/Products.html
@@ -7,7 +7,13 @@
     <meta name="keywords" content="Cake, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cake | Template</title>
+    <title>Bollos Gourmet D' Mamá</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -26,8 +32,6 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-
-    <script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 
 <body>
@@ -37,13 +41,47 @@
     </div>
 
     <!-- Nav Bar Begin -->
-    <div id="nav-placeholder"></div>
+    <!-- Offcanvas Menu Begin -->
+    <div class="offcanvas-menu-overlay"></div>
+    <div class="offcanvas-menu-wrapper">
 
-    <script>
-        $.get("snippets/nav-bar.html", function (data) {
-            $("#nav-placeholder").replaceWith(data);
-        });
-    </script>
+        <div class="offcanvas__logo">
+            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+        </div>
+
+        <div id="mobile-menu-wrap"></div>
+
+    </div>
+    <!-- Offcanvas Menu End -->
+
+    <!-- Navigation bar Begin -->
+    <header class="header nav-bar">
+        <div class="container">
+            <div class="row" id="header-banner">
+
+                <div class="header__logo left">
+                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                </div>
+
+                <div class="col-lg-12">
+                    <nav class="header__menu mobile-menu">
+                        <ul>
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li class="active"><a href="./shop.html">Menú</a></li>
+                            <li><a href="./combos.html">Combos</a></li>
+                            <li><a href="./contact.html">Contacto</a></li>
+                            <li><a href="./acerca.html">Acerca de</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="burger-container">
+                    <div class="canvas__open"><i class="fa fa-bars"></i></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Navigation bar End -->
     <!-- Nav Bar End -->
 
     <!-- Breadcrumb Begin -->
@@ -69,7 +107,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./shop-details.html">
-                        <div class="product__item products-gap">
+                        <div class="product__item products-gap float-on-hover">
                             <div class="wrapper-hover" style="display: flex; justify-content: center;">
                                 <div class="set-bg hover product_width"> <img class="product__item__pic"
                                         src="img/products/bollo bubulubu.jpg" alt=""> </div>
@@ -84,7 +122,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./shop-details.html">
-                        <div class="product__item products-gap">
+                        <div class="product__item products-gap float-on-hover">
                             <div class="wrapper-hover" style="display: flex; justify-content: center;">
                                 <div class="set-bg hover product_width"> <img class="product__item__pic"
                                         src="img/products/bollo cheesecake de fresa.jpg" alt=""> </div>
@@ -99,7 +137,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./shop-details.html">
-                        <div class="product__item products-gap">
+                        <div class="product__item products-gap float-on-hover">
                             <div class="wrapper-hover" style="display: flex; justify-content: center;">
                                 <div class="set-bg hover product_width"> <img class="product__item__pic"
                                         src="img/products/bollo mazapan.jpg" alt=""> </div>
@@ -114,7 +152,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./shop-details.html">
-                        <div class="product__item products-gap">
+                        <div class="product__item products-gap float-on-hover">
                             <div class="wrapper-hover" style="display: flex; justify-content: center;">
                                 <div class="set-bg hover product_width"> <img class="product__item__pic"
                                         src="img/products/bollo moka oreo.jpg" alt=""> </div>
@@ -129,7 +167,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./shop-details.html">
-                        <div class="product__item products-gap">
+                        <div class="product__item products-gap float-on-hover">
                             <div class="wrapper-hover" style="display: flex; justify-content: center;">
                                 <div class="set-bg hover product_width"> <img class="product__item__pic"
                                         src="img/products/bollo pica fresa.jpg" alt=""> </div>
@@ -144,7 +182,7 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./shop-details.html">
-                        <div class="product__item products-gap">
+                        <div class="product__item products-gap float-on-hover">
                             <div class="wrapper-hover" style="display: flex; justify-content: center;">
                                 <div class="set-bg hover product_width"> <img class="product__item__pic"
                                         src="img/products/bollo piña colada.jpg" alt=""> </div>
@@ -163,61 +201,61 @@
     <!-- Shop Section End -->
 
     <!-- Footer Section Begin -->
-	<footer class="footer set-bg">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__widget">
-						<h6>Horario</h6>
-						<ul>
-							<li>Lunes - Domingo: 11:00 am – 08:00 pm</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__about">
-						<div class="footer__logo">
-							<a href="#"><img src="img/footer-logo.png" alt=""></a>
-						</div>
-						<div class="footer__social">
-							<a href="https://www.facebook.com/profile.php?id=100066507559987"><i
-									class="fa fa-facebook"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-twitter"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-instagram"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-youtube-play"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__widget text-white">
-						<h6>Contáctanos</h6>
-						<ul>
-							<li><i class="fa fa-phone"></i>899 542 4832</li>
-							<!-- <li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li> -->
-							<li><a href="contact.html">Ver más</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7">
-						<p class="copyright__text text-white">
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script> All rights reserved | This
-							template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
-								href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- Footer Section End -->
+    <footer class="footer set-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__widget">
+                        <h6>Horario</h6>
+                        <ul>
+                            <li>Lunes - Domingo: 11:00 am – 08:00 pm</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__about">
+                        <div class="footer__logo">
+                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                        </div>
+                        <div class="footer__social">
+                            <a href="https://www.facebook.com/profile.php?id=100066507559987"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-twitter"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-instagram"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-youtube-play"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__widget text-white">
+                        <h6>Contáctanos</h6>
+                        <ul>
+                            <li><i class="fa fa-phone"></i>899 542 4832</li>
+                            <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
+                            <li><a href="contact.html">Ver más</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <p class="copyright__text text-white">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Section End -->
 
     <!-- Search Begin -->
     <div class="search-model">
