--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,13 @@
     <meta name="keywords" content="Cake, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cake | Template</title>
+    <title>Bollos Gourmet D' Mamá</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -26,8 +32,6 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-
-    <script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 
 <body>
@@ -36,15 +40,49 @@
         <div class="loader"></div>
     </div>
 
-     <!-- Nav Bar Begin -->
-     <div id="nav-placeholder"></div>
+    <!-- Nav Bar Begin -->
+    <!-- Offcanvas Menu Begin -->
+    <div class="offcanvas-menu-overlay"></div>
+    <div class="offcanvas-menu-wrapper">
 
-     <script>
-         $.get("snippets/nav-bar.html", function (data) {
-             $("#nav-placeholder").replaceWith(data);
-         });
-     </script>
-     <!-- Nav Bar End -->
+        <div class="offcanvas__logo">
+            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+        </div>
+
+        <div id="mobile-menu-wrap"></div>
+
+    </div>
+    <!-- Offcanvas Menu End -->
+
+    <!-- Navigation bar Begin -->
+    <header class="header nav-bar">
+        <div class="container">
+            <div class="row" id="header-banner">
+
+                <div class="header__logo left">
+                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                </div>
+
+                <div class="col-lg-12">
+                    <nav class="header__menu mobile-menu">
+                        <ul>
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li><a href="./shop.html">Menú</a></li>
+                            <li><a href="./combos.html">Combos</a></li>
+                            <li class="active"><a href="./contact.html">Contacto</a></li>
+                            <li><a href="./acerca.html">Acerca de</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="burger-container">
+                    <div class="canvas__open"><i class="fa fa-bars"></i></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Navigation bar End -->
+    <!-- Nav Bar End -->
 
     <!-- Contact Section Begin -->
     <section class="contact spad">
@@ -57,7 +95,7 @@
 
                 <!-- map div begin -->
 
-                <div class="map">
+                <div class="map drop-shadow">
                     <div class="map__iframe" style="width: 100%;">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d376.98006701224836!2d-98.0978471755584!3d25.985776746032766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86656d5a30363c25%3A0x8c34e063624879ec!2sBollos%20Gourmet%20DMAM%C3%81!5e0!3m2!1sen!2smx!4v1698188235216!5m2!1sen!2smx"
@@ -72,32 +110,17 @@
                 <div>
                     <div class="">
                         <div class="contact__address__item">
-                            <h6>san bernardino</h6>
+                            <h6>Bollos Gourmet D' Mamá</h6>
                             <ul>
                                 <li>
                                     <span class="icon_pin_alt"></span>
-                                    <p>795 W 5th St, San Bernardino, CA 92410, USA</p>
+                                    <p>Héroes de Nacozari 601, Río Bravo, 88959 Cd Río Bravo, Tamps.</p>
                                 </li>
                                 <li><span class="icon_headphones"></span>
-                                    <p>+1 800-786-1000</p>
+                                    <p>+52 899 542 4832</p>
                                 </li>
                                 <li><span class="icon_mail_alt"></span>
-                                    <p>Sweetcake@support.com</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="contact__address__item">
-                            <h6>san bernardino</h6>
-                            <ul>
-                                <li>
-                                    <span class="icon_pin_alt"></span>
-                                    <p>795 W 5th St, San Bernardino, CA 92410, USA</p>
-                                </li>
-                                <li><span class="icon_headphones"></span>
-                                    <p>+1 800-786-1000</p>
-                                </li>
-                                <li><span class="icon_mail_alt"></span>
-                                    <p>Sweetcake@support.com</p>
+                                    <p>gourmet_dmama@outlook.com</p>
                                 </li>
                             </ul>
                         </div>
@@ -115,7 +138,7 @@
                             <span>También vendemos al mayoreo</span>
                             <h2>Contáctanos</h2>
                         </div>
-                        <form action="#" id="contact-form">
+                        <form action="#" id="contact-form" class="class" style="padding: 16px;">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <label for="name">Nombre</label>
@@ -128,7 +151,7 @@
                                 <div class="col-lg-12">
                                     <label for="message">Mensaje</label>
                                     <textarea placeholder="Escribe tu mensaje aquí..." id="message"></textarea>
-                                    <button type="submit" class="site-btn">Enviar</button>
+                                    <button type="submit" class="primary-btn">Enviar</button>
                                 </div>
                             </div>
                         </form>
@@ -142,61 +165,61 @@
     <!-- Contact Section End -->
 
     <!-- Footer Section Begin -->
-	<footer class="footer set-bg">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__widget">
-						<h6>Horario</h6>
-						<ul>
-							<li>Lunes - Domingo: 11:00 am – 08:00 pm</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__about">
-						<div class="footer__logo">
-							<a href="#"><img src="img/footer-logo.png" alt=""></a>
-						</div>
-						<div class="footer__social">
-							<a href="https://www.facebook.com/profile.php?id=100066507559987"><i
-									class="fa fa-facebook"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-twitter"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-instagram"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-youtube-play"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__widget text-white">
-						<h6>Contáctanos</h6>
-						<ul>
-							<li><i class="fa fa-phone"></i>899 542 4832</li>
-							<!-- <li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li> -->
-							<li><a href="contact.html">Ver más</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7">
-						<p class="copyright__text text-white">
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script> All rights reserved | This
-							template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
-								href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- Footer Section End -->
+    <footer class="footer set-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__widget">
+                        <h6>Horario</h6>
+                        <ul>
+                            <li>Lunes - Domingo: 11:00 am – 08:00 pm</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__about">
+                        <div class="footer__logo">
+                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                        </div>
+                        <div class="footer__social">
+                            <a href="https://www.facebook.com/profile.php?id=100066507559987"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-twitter"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-instagram"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-youtube-play"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__widget text-white">
+                        <h6>Contáctanos</h6>
+                        <ul>
+                            <li><i class="fa fa-phone"></i>899 542 4832</li>
+                            <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
+                            <li><a href="contact.html">Ver más</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <p class="copyright__text text-white">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Section End -->
 
     <!-- Search Begin -->
     <div class="search-model">
