--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 	<meta name="keywords" content="Cake, unica, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Cake | Template</title>
+	<title>Bollos Gourmet D' Mamá</title>
 
-	<!-- Google Font -->
+	<!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+
+    <!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
@@ -43,8 +49,6 @@
 			margin-top: 16px;
 		}
 	</style>
-
-	<script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 
 <body>
@@ -64,13 +68,47 @@
 	<!-- Page Preloder -->
 
 	<!-- Nav Bar Begin -->
-	<div id="nav-placeholder"></div>
+	<!-- Offcanvas Menu Begin -->
+	<div class="offcanvas-menu-overlay"></div>
+	<div class="offcanvas-menu-wrapper">
 
-	<script>
-		$.get("snippets/nav-bar.html", function (data) {
-			$("#nav-placeholder").replaceWith(data);
-		});
-	</script>
+		<div class="offcanvas__logo">
+			<a href="./index.html"><img src="img/logo.png" alt=""></a>
+		</div>
+
+		<div id="mobile-menu-wrap"></div>
+
+	</div>
+	<!-- Offcanvas Menu End -->
+
+	<!-- Navigation bar Begin -->
+	<header class="header nav-bar">
+		<div class="container">
+			<div class="row" id="header-banner">
+
+				<div class="header__logo left">
+					<a href="./index.html"><img src="img/logo.png" alt=""></a>
+				</div>
+
+				<div class="col-lg-12">
+					<nav class="header__menu mobile-menu">
+						<ul>
+							<li class="active"><a href="./index.html">Inicio</a></li>
+							<li><a href="./shop.html">Menú</a></li>
+							<li><a href="./combos.html">Combos</a></li>
+							<li><a href="./contact.html">Contacto</a></li>
+							<li><a href="./acerca.html">Acerca de</a></li>
+						</ul>
+					</nav>
+				</div>
+
+				<div class="burger-container">
+					<div class="canvas__open"><i class="fa fa-bars"></i></div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- Navigation bar End -->
 	<!-- Nav Bar End -->
 
 	<!-- Hero Section Begin -->
@@ -117,7 +155,8 @@
 				</div>
 				<div class="row">
 					<div class="owl-carousel owl-dots owl-theme" id="combo-carousel">
-						<div class="combo-card drop-shadow">
+						<div class="combo-card drop-shadow float-on-hover">
+							<a href="combos.html" class="btn-light">
 							<div class="combo-img light-on-hover">
 								<img src="img/combo/combo-1.jpg" alt=""></img>
 							</div>
@@ -131,75 +170,66 @@
 								</div>
 								<div class="combo-card-details">
 									<div class="price">100</div>
-									<div>
-										<a href="combos.html" class="btn-light">Ver más <i
-												class="fa fa-chevron-right"></i></a>
 									</div>
 								</div>
-							</div>
+							</a>
 						</div>
-						<div class="combo-card drop-shadow">
-							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-2.jpg" alt=""></img>
-							</div>
-							<div class="combo-card-info">
-								<div class="combo-main-info">
-									<h5>Combo waffle</h5>
-									<ul class="combo-list">
-										<li class="combo-list-item">1 Frappé</li>
-										<li class="combo-list-item">1 Waffle</li>
-									</ul>
+						<div class="combo-card drop-shadow float-on-hover">
+							<a href="combos.html" class="btn-light">
+								<div class="combo-img light-on-hover">
+									<img src="img/combo/combo-2.jpg" alt=""></img>
 								</div>
-								<div class="combo-card-details">
-									<div class="price">120</div>
-									<div>
-										<a href="combos.html" class="btn-light">Ver más <i
-												class="fa fa-chevron-right"></i></a>
+								<div class="combo-card-info">
+									<div class="combo-main-info">
+										<h5>Combo waffle</h5>
+										<ul class="combo-list">
+											<li class="combo-list-item">1 Frappé</li>
+											<li class="combo-list-item">1 Waffle</li>
+										</ul>
+									</div>
+									<div class="combo-card-details">
+										<div class="price">120</div>
 									</div>
 								</div>
-							</div>
+							</a>
 						</div>
-						<div class="combo-card drop-shadow">
-							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-3.jpg" alt=""></img>
-							</div>
-							<div class="combo-card-info">
-								<div class="combo-main-info">
-									<h5>Combo banana split</h5>
-									<ul class="combo-list">
-										<li class="combo-list-item">1 Frappé</li>
-										<li class="combo-list-item">1 Banana split</li>
-									</ul>
+						<div class="combo-card drop-shadow float-on-hover">
+							<a href="combos.html" class="btn-light">
+								<div class="combo-img light-on-hover">
+									<img src="img/combo/combo-3.jpg" alt=""></img>
 								</div>
-								<div class="combo-card-details">
-									<div class="price">110</div>
-									<div>
-										<a href="combos.html" class="btn-light">Ver más <i
-												class="fa fa-chevron-right"></i></a>
+								<div class="combo-card-info">
+									<div class="combo-main-info">
+										<h5>Combo banana split</h5>
+										<ul class="combo-list">
+											<li class="combo-list-item">1 Frappé</li>
+											<li class="combo-list-item">1 Banana split</li>
+										</ul>
+									</div>
+									<div class="combo-card-details">
+										<div class="price">110</div>
 									</div>
 								</div>
-							</div>
+							</a>
 						</div>
-						<div class="combo-card drop-shadow">
-							<div class="combo-img light-on-hover">
-								<img src="img/combo/combo-4.png" alt=""></img>
-							</div>
-							<div class="combo-card-info">
-								<div class="combo-main-info">
-									<h5>Para compartir</h5>
-									<ul class="combo-list">
-										<li class="combo-list-item">2 Frappés</li>
-										<li class="combo-list-item">1 Nachos</li>
-									</ul>
+						<div class="combo-card drop-shadow float-on-hover">
+							<a href="combos.html" class="btn-light">
+								<div class="combo-img light-on-hover">
+									<img src="img/combo/combo-4.png" alt=""></img>
 								</div>
-								<div class="combo-card-details">
-									<div class="price">130</div>
-									<div>
-										<a href="combos.html" class="btn-light">Ver más <i
-												class="fa fa-chevron-right"></i></a>
+								<div class="combo-card-info">
+									<div class="combo-main-info">
+										<h5>Para compartir</h5>
+										<ul class="combo-list">
+											<li class="combo-list-item">2 Frappés</li>
+											<li class="combo-list-item">1 Nachos</li>
+										</ul>
+									</div>
+									<div class="combo-card-details">
+										<div class="price">130</div>
 									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 
@@ -247,49 +277,49 @@
 			<div class="row" style="justify-content: center;">
 
 				<div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo bubulubu.jpg" alt=""> </div>
-                            </div>
-                            <div class="product__item__text">
-                                <h6><a href="#">Bollo bubulubu</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+					<a href="./shop-details.html">
+						<div class="product__item products-gap float-on-hover">
+							<div class="wrapper-hover" style="display: flex; justify-content: center;">
+								<div class="set-bg hover product_width"> <img class="product__item__pic"
+										src="img/products/bollo bubulubu.jpg" alt=""> </div>
+							</div>
+							<div class="product__item__text">
+								<h6><a href="#">Bollo bubulubu</a></h6>
+								<div class="product_item_price"><span class="price">20</span></div>
+							</div>
+						</div>
+					</a>
+				</div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo cheesecake de fresa.jpg" alt=""> </div>
-                            </div>
-                            <div class="product__item__text">
-                                <h6><a href="#">Bollo cheesecake de fresa</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+				<div class="col-lg-3 col-md-6 col-sm-6">
+					<a href="./shop-details.html">
+						<div class="product__item products-gap float-on-hover">
+							<div class="wrapper-hover" style="display: flex; justify-content: center;">
+								<div class="set-bg hover product_width"> <img class="product__item__pic"
+										src="img/products/bollo cheesecake de fresa.jpg" alt=""> </div>
+							</div>
+							<div class="product__item__text">
+								<h6><a href="#">Bollo cheesecake de fresa</a></h6>
+								<div class="product_item_price"><span class="price">20</span></div>
+							</div>
+						</div>
+					</a>
+				</div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo mazapan.jpg" alt=""> </div>
-                            </div>
-                            <div class="product__item__text">
-                                <h6><a href="#">Bollo mazapan</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+				<div class="col-lg-3 col-md-6 col-sm-6">
+					<a href="./shop-details.html">
+						<div class="product__item products-gap float-on-hover">
+							<div class="wrapper-hover" style="display: flex; justify-content: center;">
+								<div class="set-bg hover product_width"> <img class="product__item__pic"
+										src="img/products/bollo mazapan.jpg" alt=""> </div>
+							</div>
+							<div class="product__item__text">
+								<h6><a href="#">Bollo mazapan</a></h6>
+								<div class="product_item_price"><span class="price">20</span></div>
+							</div>
+						</div>
+					</a>
+				</div>
 
 			</div>
 
@@ -338,7 +368,7 @@
 						<div class="col-lg-12">
 							<label for="message">Mensaje</label>
 							<textarea placeholder="Escribe tu mensaje aquí..." id="message"></textarea>
-							<button type="submit" class="site-btn">Enviar</button>
+							<button type="submit" class="primary-btn">Enviar</button>
 						</div>
 					</div>
 				</form>
@@ -365,14 +395,14 @@
 				</div>
 				<div class="col-lg-8">
 					<!-- facebook page frame Begin -->
-					<!-- <section class="facebook-page row">
+					<section class="facebook-page row">
 						<div class="iframe-wrap">
-							<iframe
+							<!-- <iframe
 								src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2F100066507559987&width=600&colorscheme=light&show_faces=true&border_color&stream=true&header=true&height=435"
 								scrolling="yes" style="border:none; overflow:hidden; background: #f2dfe0;"
-								allowtransparency="true" frameborder="0"></iframe>
+								allowtransparency="true" frameborder="0" loading="lazy"></iframe> -->
 						</div>
-					</section> -->
+					</section>
 					<!-- facebook page frame End -->
 				</div>
 			</div>
@@ -412,7 +442,7 @@
 						<h6>Contáctanos</h6>
 						<ul>
 							<li><i class="fa fa-phone"></i>899 542 4832</li>
-							<!-- <li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li> -->
+							<li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
 							<li><a href="contact.html">Ver más</a></li>
 						</ul>
 					</div>
