--- a/shop-details.html
+++ b/shop-details.html
@@ -7,7 +7,13 @@
     <meta name="keywords" content="Cake, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cake | Template</title>
+    <title>Bollos Gourmet D' Mamá</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
@@ -26,8 +32,6 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-
-    <script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 
 <body>
@@ -37,13 +41,47 @@
     </div>
 
     <!-- Nav Bar Begin -->
-    <div id="nav-placeholder"></div>
+    <!-- Offcanvas Menu Begin -->
+    <div class="offcanvas-menu-overlay"></div>
+    <div class="offcanvas-menu-wrapper">
 
-    <script>
-        $.get("snippets/nav-bar.html", function (data) {
-            $("#nav-placeholder").replaceWith(data);
-        });
-    </script>
+        <div class="offcanvas__logo">
+            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+        </div>
+
+        <div id="mobile-menu-wrap"></div>
+
+    </div>
+    <!-- Offcanvas Menu End -->
+
+    <!-- Navigation bar Begin -->
+    <header class="header nav-bar">
+        <div class="container">
+            <div class="row" id="header-banner">
+
+                <div class="header__logo left">
+                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                </div>
+
+                <div class="col-lg-12">
+                    <nav class="header__menu mobile-menu">
+                        <ul>
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li class="active"><a href="./shop.html">Menú</a></li>
+                            <li><a href="./combos.html">Combos</a></li>
+                            <li><a href="./contact.html">Contacto</a></li>
+                            <li><a href="./acerca.html">Acerca de</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="burger-container">
+                    <div class="canvas__open"><i class="fa fa-bars"></i></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Navigation bar End -->
     <!-- Nav Bar End -->
 
     <!-- Shop Details Section Begin -->
