--- a/shop.html
+++ b/shop.html
@@ -7,13 +7,19 @@
     <meta name="keywords" content="Cake, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cake | Template</title>
+    <title>Bollos Gourmet D' Mamá</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -27,7 +33,6 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
-    <script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 
 <body>
@@ -36,15 +41,49 @@
         <div class="loader"></div>
     </div>
 
-<!-- Nav Bar Begin -->
-<div id="nav-placeholder"></div>
+    <!-- Nav Bar Begin -->
+    <!-- Offcanvas Menu Begin -->
+    <div class="offcanvas-menu-overlay"></div>
+    <div class="offcanvas-menu-wrapper">
 
-<script>
-    $.get("snippets/nav-bar.html", function (data) {
-        $("#nav-placeholder").replaceWith(data);
-    });
-</script>
-<!-- Nav Bar End -->
+        <div class="offcanvas__logo">
+            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+        </div>
+
+        <div id="mobile-menu-wrap"></div>
+
+    </div>
+    <!-- Offcanvas Menu End -->
+
+    <!-- Navigation bar Begin -->
+    <header class="header nav-bar">
+        <div class="container">
+            <div class="row" id="header-banner">
+
+                <div class="header__logo left">
+                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                </div>
+
+                <div class="col-lg-12">
+                    <nav class="header__menu mobile-menu">
+                        <ul>
+                            <li><a href="./index.html">Inicio</a></li>
+                            <li class="active"><a href="./shop.html">Menú</a></li>
+                            <li><a href="./combos.html">Combos</a></li>
+                            <li><a href="./contact.html">Contacto</a></li>
+                            <li><a href="./acerca.html">Acerca de</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="burger-container">
+                    <div class="canvas__open"><i class="fa fa-bars"></i></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Navigation bar End -->
+    <!-- Nav Bar End -->
 
     <!-- Breadcrumb Begin -->
     <div class="breadcrumb-option">
@@ -67,12 +106,13 @@
                 <!-- category cards begin -->
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./products.html">
-                        <div class="product__item">
+                        <div class="product__item float-on-hover">
                             <div class="wrapper-hover">
-                                <div class="product__item__pic set-bg hover" data-setbg="img/products/bollos.jpg"> </div>
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/bollos.jpg">
+                                </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a  href="#">Bollos</a></h6>
+                                <h6><a href="#">Bollos</a></h6>
                             </div>
                         </div>
                     </a>
@@ -80,12 +120,12 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./products.html">
-                        <div class="product__item">
+                        <div class="product__item float-on-hover">
                             <div class="wrapper-hover">
                                 <div class="product__item__pic set-bg hover" data-setbg="img/products/crepa.jpg"> </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a  href="#">Crepas y waffles</a></h6>
+                                <h6><a href="#">Crepas y waffles</a></h6>
                             </div>
                         </div>
                     </a>
@@ -93,12 +133,13 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./products.html">
-                        <div class="product__item">
+                        <div class="product__item float-on-hover">
                             <div class="wrapper-hover">
-                                <div class="product__item__pic set-bg hover" data-setbg="img/products/frapes.jpg"> </div>
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/frapes.jpg">
+                                </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a  href="#">Frappes y malteadas</a></h6>
+                                <h6><a href="#">Frappes y malteadas</a></h6>
                             </div>
                         </div>
                     </a>
@@ -106,12 +147,13 @@
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <a href="./products.html">
-                        <div class="product__item">
+                        <div class="product__item float-on-hover">
                             <div class="wrapper-hover">
-                                <div class="product__item__pic set-bg hover" data-setbg="img/products/nachos.jpg"> </div>
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/nachos.jpg">
+                                </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a  href="#">Otros</a></h6>
+                                <h6><a href="#">Otros</a></h6>
                             </div>
                         </div>
                     </a>
@@ -122,83 +164,83 @@
     <!-- Shop Section End -->
 
     <!-- Footer Section Begin -->
-	<footer class="footer set-bg">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__widget">
-						<h6>Horario</h6>
-						<ul>
-							<li>Lunes - Domingo: 11:00 am – 08:00 pm</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__about">
-						<div class="footer__logo">
-							<a href="#"><img src="img/footer-logo.png" alt=""></a>
-						</div>
-						<div class="footer__social">
-							<a href="https://www.facebook.com/profile.php?id=100066507559987"><i
-									class="fa fa-facebook"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-twitter"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-instagram"></i></a>
-							<a href="#" style="display: none;"><i class="fa fa-youtube-play"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 col-sm-6">
-					<div class="footer__widget text-white">
-						<h6>Contáctanos</h6>
-						<ul>
-							<li><i class="fa fa-phone"></i>899 542 4832</li>
-							<!-- <li><i class="fa fa-envelope"></i>bollosgourmet.dmama@gmail.com</li> -->
-							<li><a href="contact.html">Ver más</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-7">
-						<p class="copyright__text text-white">
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script> All rights reserved | This
-							template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
-								href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-	<!-- Footer Section End -->
+    <footer class="footer set-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__widget">
+                        <h6>Horario</h6>
+                        <ul>
+                            <li>Lunes - Domingo: 11:00 am – 08:00 pm</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__about">
+                        <div class="footer__logo">
+                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                        </div>
+                        <div class="footer__social">
+                            <a href="https://www.facebook.com/profile.php?id=100066507559987"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-twitter"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-instagram"></i></a>
+                            <a href="#" style="display: none;"><i class="fa fa-youtube-play"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="footer__widget text-white">
+                        <h6>Contáctanos</h6>
+                        <ul>
+                            <li><i class="fa fa-phone"></i>899 542 4832</li>
+                            <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
+                            <li><a href="contact.html">Ver más</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7">
+                        <p class="copyright__text text-white">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Section End -->
 
-<!-- Search Begin -->
-<div class="search-model">
-    <div class="h-100 d-flex align-items-center justify-content-center">
-        <div class="search-close-switch">+</div>
-        <form class="search-model-form">
-            <input type="text" id="search-input" placeholder="Search here.....">
-        </form>
+    <!-- Search Begin -->
+    <div class="search-model">
+        <div class="h-100 d-flex align-items-center justify-content-center">
+            <div class="search-close-switch">+</div>
+            <form class="search-model-form">
+                <input type="text" id="search-input" placeholder="Search here.....">
+            </form>
+        </div>
     </div>
-</div>
-<!-- Search End -->
+    <!-- Search End -->
 
-<!-- Js Plugins -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/jquery.barfiller.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
-<script src="js/main.js"></script>
+    <!-- Js Plugins -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.nice-select.min.js"></script>
+    <script src="js/jquery.barfiller.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.slicknav.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.nicescroll.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
