--- a/index.html
+++ b/index.html
@@ -96,11 +96,7 @@
 							<li class="active"><a href="./index.html">Inicio</a></li>
 							<li><a href="./shop.html">Menú</a></li>
 							<li><a href="./combos.html">Combos</a></li>
-<<<<<<< Updated upstream
 							<li><a href="./contact.html">Contacto</a></li>
-=======
-							<li><a href="./combos.html">Contacto</a></li>
->>>>>>> Stashed changes
 							<li><a href="./acerca.html">Acerca de</a></li>
 						</ul>
 					</nav>
@@ -124,7 +120,7 @@
 						<div class="col-lg-8">
 							<div class="hero__text">
 								<h2>Bollos Gourmet D' Mamá</h2>
-								<a href="#" class="primary-btn">Nuestros productos</a>
+								<a href="Products.html" class="primary-btn">Nuestros productos</a>
 							</div>
 						</div>
 					</div>
@@ -136,7 +132,7 @@
 						<div class="col-lg-8 ">
 							<div class="hero__text">
 								<h2>Bollos Gourmet D' Mamá</h2>
-								<a href="#" class="primary-btn">Nuestros combos</a>
+								<a href="combos.html" class="primary-btn">Nuestros combos</a>
 							</div>
 						</div>
 					</div>
@@ -401,10 +397,10 @@
 					<!-- facebook page frame Begin -->
 					<section class="facebook-page row">
 						<div class="iframe-wrap">
-							<!-- <iframe
+							<iframe
 								src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2F100066507559987&width=600&colorscheme=light&show_faces=true&border_color&stream=true&header=true&height=435"
 								scrolling="yes" style="border:none; overflow:hidden; background: #f2dfe0;"
-								allowtransparency="true" frameborder="0" loading="lazy"></iframe> -->
+								allowtransparency="true" frameborder="0" loading="lazy"></iframe>
 						</div>
 					</section>
 					<!-- facebook page frame End -->
