Delete breadcrumbs and conflicts

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
 
                 <!-- map div begin -->
 
-                <div class="map drop-shadow">
+                <div class="map">
                     <div class="map__iframe" style="width: 100%;">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d376.98006701224836!2d-98.0978471755584!3d25.985776746032766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86656d5a30363c25%3A0x8c34e063624879ec!2sBollos%20Gourmet%20DMAM%C3%81!5e0!3m2!1sen!2smx!4v1698188235216!5m2!1sen!2smx"
