--- a/acerca.html
+++ b/acerca.html
@@ -132,7 +132,7 @@
 
         <div class="row">
         
-                <div class="about__text col-lg-10S col-md-12 col-sm-12 centered">
+                <div class="about__text col-lg-10 col-md-12 col-sm-12 centered">
                     <div class="section-title ">
                         <span>Descubre</span>
                         <h2>Nuestra historia</h2>
