--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pacifico&display=swap"
+            rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pacifico&display=swap"
+            rel="stylesheet">
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/flaticon.css" type="text/css">
@@ -87,9 +97,11 @@
     <!-- Contact Section Begin -->
     <section class="contact spad">
         <div class="container">
-
-
-
+            <div class="col-lg-6 col-md-6 col-sm-6" style="margin-bottom: 16px;">
+                <div class="breadcrumb__text">
+                    <h2>Menú</h2>
+                </div>
+            </div>
             <!-- map contac begin -->
             <div style="display: flex; flex-direction: row-reverse;">
 
