--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 					<span>También vendemos al mayoreo</span>
 					<h2>Contáctanos</h2>
 				</div>
-				<form action="#" id="contact-form" class="contact__form">
+				<form action="#" id="contact-form" class="class" style="padding: 16px;">
 					<div class="row">
 						<div class="col-lg-6">
 							<label for="name">Nombre</label>
