--- a/Combos.html
+++ b/Combos.html
@@ -21,6 +21,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pacifico&display=swap"
+		rel="stylesheet">
+
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/flaticon.css" type="text/css">
@@ -106,7 +111,7 @@
                 <!-- category cards begin -->
 
                 <div class="combo-card drop-shadow float-on-hover">
-                    <a href="combos.html" class="btn-light">
+                    <a href="shop-details.html" class="btn-light">
                         <div class="combo-img light-on-hover">
                             <img src="img/combo/combo-1.jpg" alt=""></img>
                         </div>
@@ -145,7 +150,7 @@
                     </div>
                 </a>
             </div>
-    
+
             <div class="combo-card drop-shadow float-on-hover">
                 <a href="combos.html" class="btn-light">
                     <div class="combo-img light-on-hover">
