CAMBIO DE NOMBRES

--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
 	<div class="offcanvas-menu-wrapper">
 
 		<div class="offcanvas__logo">
-			<a href="./index.html"><img src="img/logo.png" alt=""></a>
+			<a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
 		</div>
 
 		<div id="mobile-menu-wrap"></div>
@@ -87,16 +87,16 @@
 			<div class="row" id="header-banner">
 
 				<div class="header__logo left">
-					<a href="./index.html"><img src="img/logo.png" alt=""></a>
+					<a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
 				</div>
 
-				<div class="col-lg-12">
+				<div class="col-lg-12"> 
 					<nav class="header__menu mobile-menu">
 						<ul>
-							<li class="active"><a href="./index.html">Inicio</a></li>
-							<li><a href="./shop.html">Menú</a></li>
+							<li class="active"><a href="./dashboard.html">Inicio</a></li>
+							<li><a href="./menu.html">Menú</a></li>
 							<li><a href="./combos.html">Combos</a></li>
-							<li><a href="./contact.html">Contacto</a></li>
+							<li><a href="./contacto.html">Contacto</a></li>
 							<li><a href="./acerca.html">Acerca de</a></li>
 						</ul>
 					</nav>
@@ -120,7 +120,7 @@
 						<div class="col-lg-8">
 							<div class="hero__text">
 								<h2>Bollos Gourmet D' Mamá</h2>
-								<a href="products.html" class="primary-btn">Nuestros productos</a>
+								<a href="productos.html" class="primary-btn">Nuestros productos</a>
 							</div>
 						</div>
 					</div>
@@ -277,7 +277,7 @@
 			<div class="row" style="justify-content: center;">
 
 				<div class="col-lg-3 col-md-6 col-sm-6">
-					<a href="./shop-details.html">
+					<a href="./descripcion.html">
 						<div class="product__item products-gap float-on-hover">
 							<div class="wrapper-hover" style="display: flex; justify-content: center;">
 								<div class="set-bg hover product_width"> <img class="product__item__pic"
@@ -292,7 +292,7 @@
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-sm-6">
-					<a href="./shop-details.html">
+					<a href="./descripcion.html">
 						<div class="product__item products-gap float-on-hover">
 							<div class="wrapper-hover" style="display: flex; justify-content: center;">
 								<div class="set-bg hover product_width"> <img class="product__item__pic"
@@ -307,7 +307,7 @@
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-sm-6">
-					<a href="./shop-details.html">
+					<a href="./descripcion.html">
 						<div class="product__item products-gap float-on-hover">
 							<div class="wrapper-hover" style="display: flex; justify-content: center;">
 								<div class="set-bg hover product_width"> <img class="product__item__pic"
@@ -323,7 +323,7 @@
 
 			</div>
 
-			<div class="row"><a href="shop.html" class="primary-btn centered">Ver todos los productos</a></div>
+			<div class="row"><a href="menu.html" class="primary-btn centered">Ver todos los productos</a></div>
 		</div>
 	</section>
 	<!-- Para este clima End -->
@@ -374,7 +374,7 @@
 				</form>
 			</div>
 		</div>
-	</section>
+	</section> 
 	<!-- Contacto End -->
 
 
@@ -443,7 +443,7 @@
 						<ul>
 							<li><i class="fa fa-phone"></i>899 542 4832</li>
 							<li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
-							<li><a href="contact.html">Ver más</a></li>
+							<li><a href="contacto.html">Ver más</a></li>
 						</ul>
 					</div>
 				</div>
