--- a/snippets/footer.html
+++ b/snippets/footer.html
@@ -29,7 +29,7 @@
                     <ul>
                         <li><i class="fa fa-phone"></i>899 542 4832</li>
                         <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
-                        <li><a href="contact.html">Ver más</a></li>
+                        <li><a href="contacto.html">Ver más</a></li>
                     </ul>
                 </div>
             </div>
