--- a/combos.html
+++ b/combos.html
@@ -52,7 +52,8 @@
     <div class="offcanvas-menu-wrapper">
 
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./dashboard.html
+            "><img src="img/logo.png" alt=""></a>
         </div>
 
         <div id="mobile-menu-wrap"></div>
@@ -66,16 +67,16 @@
             <div class="row" id="header-banner">
 
                 <div class="header__logo left">
-                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                    <a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
                 </div>
 
                 <div class="col-lg-12">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Inicio</a></li>
-                            <li><a href="./shop.html">Menú</a></li>
+                            <li><a href="./dashboard.html">Inicio</a></li>
+                            <li><a href="./menu.html">Menú</a></li>
                             <li class="active"><a href="./combos.html">Combos</a></li>
-                            <li><a href="./contact.html">Contacto</a></li>
+                            <li><a href="./contacto.html">Contacto</a></li>
                             <li><a href="./acerca.html">Acerca de</a></li>
                         </ul>
                     </nav>
@@ -111,7 +112,7 @@
                 <!-- category cards begin -->
 
                 <div class="combo-card drop-shadow float-on-hover">
-                    <a href="shop-details.html" class="btn-light">
+                    <a href="descripcion.html" class="btn-light">
                         <div class="combo-img light-on-hover">
                             <img src="img/combo/combo-1.jpg" alt=""></img>
                         </div>
@@ -228,7 +229,7 @@
                         <ul>
                             <li><i class="fa fa-phone"></i>899 542 4832</li>
                             <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
-                            <li><a href="contact.html">Ver más</a></li>
+                            <li><a href="contacto.html">Ver más</a></li>
                         </ul>
                     </div>
                 </div>
