--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
     <div class="offcanvas-menu-wrapper">
 
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
         </div>
 
         <div id="mobile-menu-wrap"></div>
@@ -70,16 +70,16 @@
             <div class="row" id="header-banner">
 
                 <div class="header__logo left">
-                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                    <a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
                 </div>
 
                 <div class="col-lg-12">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Inicio</a></li>
-                            <li><a href="./shop.html">Menú</a></li>
+                            <li><a href="./dashboard.html">Inicio</a></li>
+                            <li><a href="./menu.html">Menú</a></li>
                             <li><a href="./combos.html">Combos</a></li>
-                            <li class="active"><a href="./contact.html">Contacto</a></li>
+                            <li class="active"><a href="./contacto.html">Contacto</a></li>
                             <li><a href="./acerca.html">Acerca de</a></li>
                         </ul>
                     </nav>
@@ -208,7 +208,7 @@
                         <ul>
                             <li><i class="fa fa-phone"></i>899 542 4832</li>
                             <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
-                            <li><a href="contact.html">Ver más</a></li>
+                            <li><a href="contacto.html">Ver más</a></li>
                         </ul>
                     </div>
                 </div>
