--- a/descripcion.html
+++ b/descripcion.html
@@ -46,7 +46,7 @@
     <div class="offcanvas-menu-wrapper">
 
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
         </div>
 
         <div id="mobile-menu-wrap"></div>
@@ -60,16 +60,16 @@
             <div class="row" id="header-banner">
 
                 <div class="header__logo left">
-                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                    <a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
                 </div>
 
                 <div class="col-lg-12">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Inicio</a></li>
-                            <li class="active"><a href="./shop.html">Menú</a></li>
+                            <li><a href="./dashboard.html">Inicio</a></li>
+                            <li class="active"><a href="./menu.html">Menú</a></li>
                             <li><a href="./combos.html">Combos</a></li>
-                            <li><a href="./contact.html">Contacto</a></li>
+                            <li><a href="./contacto.html">Contacto</a></li>
                             <li><a href="./acerca.html">Acerca de</a></li>
                         </ul>
                     </nav>
