--- a/menu.html
+++ b/menu.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
 </head>
 
 <body>
@@ -51,7 +52,7 @@
     <div class="offcanvas-menu-wrapper">
 
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
         </div>
 
         <div id="mobile-menu-wrap"></div>
@@ -65,16 +66,16 @@
             <div class="row" id="header-banner">
 
                 <div class="header__logo left">
-                    <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                    <a href="./dashboard.html"><img src="img/logo.png" alt=""></a>
                 </div>
 
                 <div class="col-lg-12">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Inicio</a></li>
-                            <li class="active"><a href="./shop.html">Menú</a></li>
+                            <li><a href="./dashboard.html">Inicio</a></li>
+                            <li class="active"><a href="./menu.html">Menú</a></li>
                             <li><a href="./combos.html">Combos</a></li>
-                            <li><a href="./contact.html">Contacto</a></li>
+                            <li><a href="./contacto.html">Contacto</a></li>
                             <li><a href="./acerca.html">Acerca de</a></li>
                         </ul>
                     </nav>
@@ -95,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="breadcrumb__text">
-                        <h2>Bollos</h2>
+                        <h2>Menú</h2>
                     </div>
                 </div>
             </div>
@@ -106,99 +107,68 @@
     <!-- Shop Section Begin -->
     <section class="shop spad">
         <div class="container">
-            <div class="row">
+            <div class="row products-gap" style="justify-content: space-around;">
 
                 <!-- category cards begin -->
-
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap float-on-hover">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo bubulubu.jpg" alt=""> </div>
+                    <a href="./productos.html">
+                        <div class="product__item float-on-hover">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/bollos.jpg">
+                                </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a href="#">Bollo bubulubu</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
+                                <h6><a href="#">Bollos</a></h6>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap float-on-hover">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo cheesecake de fresa.jpg" alt=""> </div>
+                    <a href="./products.html">
+                        <div class="product__item float-on-hover">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/crepa.jpg"> </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a href="#">Bollo cheesecake de fresa</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
+                                <h6><a href="#">Crepas y waffles</a></h6>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap float-on-hover">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo mazapan.jpg" alt=""> </div>
+                    <a href="./products.html">
+                        <div class="product__item float-on-hover">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/frapes.jpg">
+                                </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a href="#">Bollo mazapan</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
+                                <h6><a href="#">Frappes y malteadas</a></h6>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap float-on-hover">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo moka oreo.jpg" alt=""> </div>
+                    <a href="./products.html">
+                        <div class="product__item float-on-hover">
+                            <div class="wrapper-hover">
+                                <div class="product__item__pic set-bg hover" data-setbg="img/products/nachos.jpg">
+                                </div>
                             </div>
                             <div class="product__item__text">
-                                <h6><a href="#">Bollo moka oreo</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
+                                <h6><a href="#">Otros</a></h6>
                             </div>
                         </div>
                     </a>
                 </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap float-on-hover">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo pica fresa.jpg" alt=""> </div>
-                            </div>
-                            <div class="product__item__text">
-                                <h6><a href="#">Bollo pica fresa</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
 
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <a href="./shop-details.html">
-                        <div class="product__item products-gap float-on-hover">
-                            <div class="wrapper-hover" style="display: flex; justify-content: center;">
-                                <div class="set-bg hover product_width"> <img class="product__item__pic"
-                                        src="img/products/bollo piña colada.jpg" alt=""> </div>
-                            </div>
-                            <div class="product__item__text">
-                                <h6><a href="#">Bollo piña colada</a></h6>
-                                <div class="product_item_price"><span class="price">20</span></div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+            </div>
+        </div>
+    
 
                 <!-- category cards end -->
 
@@ -237,7 +207,7 @@
                         <ul>
                             <li><i class="fa fa-phone"></i>899 542 4832</li>
                             <li><i class="fa fa-envelope"></i>gourmet_dmama@outlook.com</li>
-                            <li><a href="contact.html">Ver más</a></li>
+                            <li><a href="contacto.html">Ver más</a></li>
                         </ul>
                     </div>
                 </div>
